# Codeforces

./: .gitignore  Makefile  README.md  pyproject.toml
codeforces/: data.json  functions.py  index.py  template.py  utils.py
records/CodeTON Round 6 (Div. 1 + Div. 2, Rated, Prizes!)/: A.py  B.py  C.py  D.py  E.py  F.py  G.py  H.py  README.md
records/CodeTON Round 6 (Div. 1 + Div. 2, Rated, Prizes!)/test-io/A/: 0.out
records/CodeTON Round 6 (Div. 1 + Div. 2, Rated, Prizes!)/test-io/B/: 0.out
records/CodeTON Round 6 (Div. 1 + Div. 2, Rated, Prizes!)/test-io/C/: 0.out
records/CodeTON Round 6 (Div. 1 + Div. 2, Rated, Prizes!)/test-io/D/: 0.out
records/CodeTON Round 6 (Div. 1 + Div. 2, Rated, Prizes!)/test-io/E/: 0.out
records/CodeTON Round 6 (Div. 1 + Div. 2, Rated, Prizes!)/test-io/F/: 0.out
records/CodeTON Round 6 (Div. 1 + Div. 2, Rated, Prizes!)/test-io/G/: 0.out
records/CodeTON Round 6 (Div. 1 + Div. 2, Rated, Prizes!)/test-io/H/: 0.in  0.out  1.in  1.out
records/Codeforces Beta Round 4 (Div. 2 Only)/: A.py  B.py  C.py  D.py  README.md
records/Codeforces Round #849 (Div. 4)/: A.py  B.py  C.py  D.py  E.py  F.py  G1.py  G2.py  README.md
records/Codeforces Round #849 (Div. 4)/test-io/A/: 0.out
records/Codeforces Round #849 (Div. 4)/test-io/B/: 0.out
records/Codeforces Round #849 (Div. 4)/test-io/C/: 0.out
records/Codeforces Round 897 (Div. 2)/: A.py  B.py  C.py  D.py  E1.py  E2.py  F.py  README.md
records/Codeforces Round 898 (Div. 4)/: A.py  B.py  C.py  D.py  E.py  F.py  G.py  H.py  README.md
(+22 files in other folders)
